[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/cannonball.png" type="Texture" id=1]
[ext_resource path="res://Player/Cannonball.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="Cannonball" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
speed = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Cannonball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
